# serenity

./: .gitignore  README.md
AK/: BiasedRefCounted.cpp  BiasedRefCounted.h  Debug.h.in  FixedPoint.h  FixedStringBuffer.h  Format.cpp  Function.h  GenericLexer.h  HashTable.h  IPv6Address.h  IpAddressCidr.h  JsonParser.cpp  Math.h  Optional.h  Range.h  Result.h  String.cpp  String.h  Types.h  Vector.h
Base/etc/: SystemServer.ini
Base/res/: fortunes.json
Base/res/apps/: BadApple.af
Base/res/badapple/: get-badapple.py
Documentation/: README.md  VSCodeConfiguration.md
Kernel/: Debug.h.in
Kernel/Arch/: init.cpp
Kernel/Arch/aarch64/: Processor.cpp
Kernel/Heap/: kmalloc.cpp
Kernel/Memory/: MemoryManager.cpp  Region.cpp
Kernel/Net/: ICMPv6.h  NetworkAdapter.cpp  NetworkAdapter.h  NetworkTask.cpp  Socket.cpp  TCPSocket.cpp  TCPSocket.h  UDPSocket.cpp  UDPSocket.h
Kernel/Net/IPv4/: IP.h  IPv6.h  Socket.cpp  Socket.h
Kernel/Net/Intel/: E1000ENetworkAdapter.cpp  E1000NetworkAdapter.cpp
Kernel/Net/Realtek/: RTL8168NetworkAdapter.cpp
Kernel/Net/VirtIO/: VirtIONetworkAdapter.cpp
Kernel/Tasks/: Thread.h
Meta/: run.py  run.sh
Meta/CMake/: all_the_debug_macros.cmake
Meta/Lagom/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/AK/: CMakeLists.txt  TestFloatingPoint.cpp  TestGenericLexer.cpp  TestIPv4AddressCidr.cpp  TestIPv6AddressCidr.cpp  TestOptional.cpp
Tests/LibCore/: TestLibCoreSharedSingleProducerCircularQueue.cpp
Tests/LibDisassembly/: TestRISCV64Disassembly.cpp
Userland/Applets/ResourceGraph/: main.cpp
Userland/Applications/: CMakeLists.txt
Userland/Applications/Debugger/: main.cpp
Userland/Applications/Fidewepre/: CMakeLists.txt  PDFPage.cpp  PDFPage.h  PerformanceWidget.h  Presentation.cpp  Presentation.h  PresenterSettings.cpp  PresenterSettings.h  PresenterSettingsFooter.gml  PresenterSettingsPerformance.gml  PresenterWidget.cpp  PresenterWidget.h  Slide.cpp  Slide.h  SlideObject.cpp  SlideObject.h  main.cpp
Userland/Applications/Piano/: AudioPlayerLoop.h  KeysWidget.cpp  KnobsWidget.cpp  MainWidget.cpp  Music.h  PlayerWidget.cpp  ProcessorParameterDropdown.h  Track.cpp  Track.h  TrackManager.cpp  WaveWidget.cpp  WaveWidget.h
Userland/Applications/PixelPaint/: FilterGallery.cpp  FilterPreviewWidget.cpp  FilterPreviewWidget.h  ImageProcessor.cpp  ImageProcessor.h  main.cpp
Userland/Applications/SoundPlayer/: PlaybackManager.h
Userland/Applications/Spreadsheet/: Cell.cpp  CellTypeDialog.cpp  ExportDialog.cpp  ExportDialog.h  HelpWindow.cpp  ImportDialog.cpp  ImportDialog.h  JSIntegration.cpp  JSIntegration.h  Spreadsheet.cpp  Spreadsheet.h  SpreadsheetModel.cpp  SpreadsheetView.cpp  SpreadsheetWidget.cpp  SpreadsheetWidget.h  Workbook.cpp  Workbook.h
Userland/Demos/: CMakeLists.txt
Userland/Demos/BadApple/: BadApple.cpp  (+1 more)
Userland/Libraries/: CMakeLists.txt
Userland/Services/: CMakeLists.txt
Userland/Services/LoggingServer/: CMakeLists.txt  ConnectionFromClient.cpp  ConnectionFromClient.h  LoggingClient.ipc  LoggingServer.ipc  main.cpp
Userland/Services/SystemServer/: CMakeLists.txt  ConnectionFromClient.cpp  ConnectionFromClient.h  ConnectionToLoggingServer.h  ConnectionToServer.h  IPCTypes.cpp  IPCTypes.h  Service.cpp  Service.h  SystemControlClient.ipc  SystemControlServer.ipc  UnitManagement.cpp  UnitManagement.h  main.cpp
Userland/Utilities/: CMakeLists.txt  abench.cpp  aconv.cpp  disasm.cpp  functrace.cpp  notifysoundc.cpp  pixelflut.cpp  pro.cpp  shutdown.cpp  ssctl.cpp  true.cpp
(+113 files in other folders)
